--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="todo-button" type="submit">
             <i class="fas fa-plus-square"></i>
         </button>
-        <div class='select'>
+        <div class="select">
             <select name="todos" class="filter-todo">
                 <option value="all">All</option>
                 <option value="completed">Completed</option>
@@ -29,8 +29,7 @@
         </div>
     </form>
     <div class="todo-container">
-        <ul class="todo-list">
-        </ul>
+        <ul class="todo-list"></ul>
     </div>
     <script src="./app.js"></script>
 </body>
